# icnc-hello-world

./: .gitignore  CMakeLists.txt  Makefile  README.md  hello-world.cpp  hello-world.h
